# cuda_advisor

./: .gitignore  CMakeLists.txt  README.md  analyze_all.sh  build.sh  run_experiments.sh
benchmarks/: balanced.cu  compute_bound.cu  memory_bound.cu
data/: log.txt  log_medium.txt  profiling_results.csv
data/analysis_large/: analysis_report.txt
data/analysis_medium/: analysis_report.txt
data/analysis_small/: analysis_report.txt
data/analysis_xlarge/: analysis_report.txt
include/features/: feature_extractor.hpp  feature_extractor_impl.hpp
include/utils/: device_query.hpp  profiler.hpp  profiler_impl.hpp
python/: analyze_results.py  compare_experiments.py
src/: collect_data.cu  gridadvisor.cu  test_benchmarks.cu  test_device_query.cu  test_features.cu  test_profiler.cu
src/utils/: device_query.cu
